# MDE

./: .gitignore  README.md  pyproject.toml
dimx/: CLI_Parser.py  CrossMapColumns.py  FastCCM.py  MDE.py  Run.py  __init__.py
example/: MDE_Fly_Example.ipynb  pyEDM_FastCCM_parity_example.ipynb
src/: CLI_Parser.py  Evaluate.py  MDE.py  MDE_PCA_DiffMap.py  ManifoldDimExpand.py  ManifoldDimExpand_noCCM.py  Run.py  SimplexRho_ColumnList.py
src/MDE/: CrossMapColumns.py  Evaluate.py  MDE.py  ManifoldDimExpand.py  Run.py  __init__.py
tests/: conftest.py  test_MDE.py  tests.py
tests/ValidOutput/: Evaluate_Fly_FWD_4_Valid.csv  MDE_Fly_2_Valid.csv  MDE_Fly_3_Valid.csv  MDE_Lorenz5D_1_Valid.csv
tools/: compare_mde_runs.py
