[project]
name = "MDE"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pydiffmap>=0.2.0.1",
    "pyedm>=2.2.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
